# cfmoon-blog

./: .gitignore  AGENTS.md  LICENSE  README.md  TODO.org  TheAlephProject.cabal  flake.nix  index.org  justfile  wrangler.jsonc
about/: about.org
posts/: first-strike.org  setting-up-hubstaff-nixos.org
src/: Main.hs
src/Mooneghan/: Contexts.hs
static/assets/: robots.txt
static/css/: anchors.css  body.css  feature-cards.css  footer.css  header.css  hero-titles.css  main.css  navigation.css  post-list.css  post.css  syntax.css  variables.css
static/js/: main.js
templates/: archive.html  article-char-card.html  default.html  feature-cards.html  footer.html  header.html  index-template.html  my-atom-item.xml  my-atom.xml  philosophy.html  post-authors.html  post-date.html  post-list.html  post.html  recipes.html  sitemap.xml
